@@ -6,7 +6,7 @@ if have_type("struct statfs", headers)
   have_struct_member("struct statfs", "f_type", headers)
 end
 
-headers = %w[sys/statvfs.h]
+headers = %w[sys/statvfs.h].select {|h| have_header(h)}
 if have_type("struct statvfs", headers)
   have_struct_member("struct statvfs", "f_fstypename", headers)
   have_struct_member("struct statvfs", "f_basetype", headers)
