@@ -1,3 +1,11 @@
+Sun May  3 22:40:06 2015  Rei Odaira  <Rei.Odaira@gmail.com>
+
+	* ext/-test-/file/fs.c: need to include sys/statvfs.h
+	  to use statvfs().
+
+	* ext/-test-/file/extconf.rb: check the existence of
+	  sys/statvfs.h
+
 Sun May  3 21:59:48 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
 
 	* lib/yaml.rb: fix typo. [ci skip][fix GH-890]
